[gd_scene load_steps=5 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 259.0
margin_top = 147.0
margin_right = 381.0
margin_bottom = 212.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Spelunker runner"
uppercase = true

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 122.0
margin_bottom = 41.0
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 122.0
margin_bottom = 65.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 256.0
margin_top = 256.0
margin_right = 383.0
margin_bottom = 355.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 22.0
margin_top = 40.0
margin_right = 105.0
margin_bottom = 59.0
alignment = 1

[node name="HighScoreText" type="Label" parent="CenterContainer2/VBoxContainer"]
margin_right = 83.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "High score: "
align = 1
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
